refactor: segregate PermissionConstants into module-wise permission classes
Extract permission constants into 14 module-specific classes under
constants.permissions package (Sports, Events, Admin, Vendor, Food, etc.).
Each module class owns its permission string constants and an ALL list.
PermissionConstants re-exports all constants for backward compatibility
and composes role permission lists using module-level references.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>